Fixing The Collapsable Navbar Layout

--- a/bootstrap/css/styles.css
+++ b/bootstrap/css/styles.css
@@ -88,3 +88,55 @@ body{
     clear: both;
     margin-top: -30px;
 }
+
+/********** Large devices only **********/
+@media (min-width: 1200px) {
+
+}
+
+/********** Medium devices only **********/
+@media (min-width: 992px) and (max-width: 1199px) {
+  /* Header */
+  #logo-img {
+    background: url('../images/restaurant-logo_medium.png') no-repeat;
+    width: 100px;
+    height: 100px;
+    margin: 5px 5px 5px 0;
+  }
+  /* End Header */
+}
+
+/********** Small devices only **********/
+@media (min-width: 768px) and (max-width: 991px) {
+
+}
+
+/********** Extra small devices only **********/
+@media (max-width: 767px) {
+  /* Header */
+  .navbar-brand{
+    padding-top: 10px;
+    height: 80px;
+  }
+  .navbar-brand h1{
+      padding-top: 10px;
+      font-size: 5vw;
+  }
+  .navbar-brand p{
+      font-size: .6em;
+      margin-top: 12px;
+  }
+  .navbar-brand p img{
+      height: 20px;
+  }
+  #collapsable-nav a{
+      font-size: 1.2em;
+  }
+  #collapsable-nav a span{
+      font-size: 1em;
+      margin-right: 5px;
+  }
+  #nav-list :nth-child(3){
+      margin-left: 11px
+  }
+}
